--- a/index.html
+++ b/index.html
@@ -322,14 +322,7 @@
 										<h2 class="tab-title">¿Por qué yo?</h2>
 										<div class="content">
 											<p></p>
-											<p><b style="color:#f2784B">01. Experiencia</b><br>
-											Más de 5 años de experiencia trabajando como diseñador y programador web, tanto en el ámbito privado como freelance.</p>
-											<p><b style="color:#f2784B">02. Asesoramiento</b><br>
-											Cada proyecto requiere una solución a medida. Junto a cada cliente, analizo la alternativa que más se adapte a sus necesidades.</p>
-											<p><b style="color:#f2784B">03. Pixel perfect</b><br>
-											La calidad de mis productos terminados se diferencian por la minuciosa atención en los detalles, un diseño limpio y minimalista.</p>
-											<p><b style="color:#f2784B">04. Puntualidad</b><br>
-											Me caracterizo por ser una persona ordenada y puntal. Para lograrlo, realizo una exhaustiva planificación de mi trabajo.</p>
+											<p>Mi pasión y curiosidad por la tecnología son fundamentales en mi enfoque profesional. Estoy constantemente actualizado y comprometido con el aprendizaje continuo en un campo dinámico como la informática. Tengo la capacidad probada de anticipar y adaptarme a los cambios tecnológicos, aplicando creatividad e innovación para resolver problemas de manera efectiva. Mi visión integral abarca tanto los aspectos técnicos como las implicaciones sociales y económicas de la tecnología, lo que me capacita para tomar decisiones informadas y estratégicas. Mi compromiso con la excelencia y la mejora continua me impulsa a ser un líder en la innovación y la transformación digital. En resumen, mi enfoque proactivo y mi motivación por el crecimiento y la excelencia me convierten en un candidato ideal para contribuir significativamente al equipo y al éxito de su organización en el campo tecnológico.</p>
 										</div>
 									</div>
 								</div>
