--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 										<h2 class="tab-title">¿Por qué yo?</h2>
 										<div class="content">
 											<p></p>
-											<p>Mi pasión y curiosidad por la tecnología son fundamentales en mi enfoque profesional. Estoy constantemente actualizado y comprometido con el aprendizaje continuo en un campo dinámico como la informática. Tengo la capacidad probada de anticipar y adaptarme a los cambios tecnológicos, aplicando creatividad e innovación para resolver problemas de manera efectiva. Mi visión integral abarca tanto los aspectos técnicos como las implicaciones sociales y económicas de la tecnología, lo que me capacita para tomar decisiones informadas y estratégicas. Mi compromiso con la excelencia y la mejora continua me impulsa a ser un líder en la innovación y la transformación digital. En resumen, mi enfoque proactivo y mi motivación por el crecimiento y la excelencia me convierten en un candidato ideal para contribuir significativamente al equipo y al éxito de su organización en el campo tecnológico.</p>
+											<p>Mi pasión y curiosidad por la tecnología son fundamentales en mi enfoque profesional. Estoy constantemente actualizado y comprometido con el aprendizaje continuo en un campo dinámico como la informática. Tengo la capacidad probada de anticipar y adaptarme a los cambios tecnológicos, aplicando creatividad e innovación para resolver problemas de manera efectiva. Mi visión integral abarca tanto los aspectos técnicos como las implicaciones sociales y económicas de la tecnología, lo que me capacita para tomar decisiones informadas y estratégicas. Mi compromiso con la excelencia y la mejora continua me impulsa a ser un líder en la innovación y la transformación digital.</p><p> En resumen, mi enfoque proactivo y mi motivación por el crecimiento y la excelencia me convierten en un candidato ideal para contribuir significativamente al equipo y al éxito de su organización en el campo tecnológico.</p>
 										</div>
 									</div>
 								</div>
@@ -332,6 +332,7 @@
 									<div class="about-text">
 										<h2 class="tab-title">Mi Vision</h2>
 										<div class="content">
+											<br>
 											<p>Se caracteriza por mi pasión y curiosidad por la tecnología, así como por mi constante búsqueda de actualización y aprendizaje en un campo en constante evolución. Tengo la capacidad de anticipar y adaptarme a los cambios tecnológicos, aplicando mis conocimientos de forma creativa e innovadora para resolver problemas y desarrollar soluciones efectivas.</p><p> Mi visión abarca tanto los aspectos técnicos como las implicaciones sociales y económicas de la tecnología, lo que me permite tomar decisiones informadas y estratégicas en un entorno digital dinámico. Mi compromiso con la excelencia y la mejora continua me impulsa a ser un líder en la innovación y la transformación digital, contribuyendo al avance y desarrollo en el campo de la informática.</p><p>¡Mi visión en informática me posiciona como un profesional proactivo y motivado por el crecimiento y la excelencia en el mundo tecnológico!</p>
 										</div>
 									</div>
