--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@
 				<div class="row">
 					<div class="col-md-12 col-sm-12 col-xs-12">
 						<div class="section-title">
-							<h1><span>Mi</span> Servicio<i class="fa fa-rocket"></i></h1>
-							<p>Ofrezco soluciones integrales a empresas y profesionales de cara a crear su imagen digital y a conectar con sus usuarios.<p>
+							<h1><span>Características</span>  Personales y Profesionales<i class="fa fa-rocket"></i></h1>
+							
 						</div>
 					</div>
 				</div>
@@ -406,8 +406,7 @@
 				<div class="row">
 					<div class="col-md-12 col-sm-12 col-xs-12">
 						<div class="section-title">
-							<h1><span>Mi</span> Portfolio<i class="fa fa-briefcase"></i></h1>
-							<p>“Diseño experiencias digitales únicas centradas en el usuario, que impacten positivamente en la satisfacción de los mismos”</p>
+							<h1><span>Mis</span> proyectos<i class="fa fa-briefcase"></i></h1>
 						</div>
 					</div>
 				</div>
@@ -417,7 +416,7 @@
 						<!-- portfolio Nav -->
 						<div class="portfolio-nav">
 							<ul>
-								<li class="active" data-filter="*"><span>06</span><i class="fa fa-tasks"></i>Todo mi trabajo</li>
+								<li class="active" data-filter="*"><span>06</span><i class="fa fa-tasks"></i>Todos mis proyectos</li>
 								<li data-filter=".development"><span>01</span><i class="fa fa-pencil"></i>Portfolio</li>
 								<li data-filter=".design"><span>05</span><i class="fa fa-paint-brush"></i>Web comercial</li>
 								<li data-filter=".html5"><span>05</span><i class="fa fa-html5"></i>Maquetas</li>
