--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 								<!--/ End Single Tab -->
 								<!-- Single Tab -->
 								<div role="tabpanel" class="tab-pane fade" id="skill">
-									<h2 class="tab-title">Mi Habilidad</h2>
+									<h2 class="tab-title">Habilidades en Informatica</h2>
 									<div class="row">				
 										<div class="col-md-6 col-sm-6 col-xs-12">
 											<!-- Single Skill -->
@@ -257,7 +257,7 @@
 											<!-- Single Skill -->
 											<div class="single-skill">
 												<div class="skill-info">
-													<h4>Trabajo en equipo</h4>
+													<h4>AutoCAD</h4>
 												</div>
 												<div class="progress">
 												  <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"><span>100%</span></div>
@@ -269,7 +269,7 @@
 											<!-- Single Skill -->
 											<div class="single-skill">
 												<div class="skill-info">
-													<h4>Capacidad de resolución de problemas</h4>
+													<h4>Photoshop</h4>
 												</div>
 												<div class="progress">
 												  <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"><span>100%</span></div>
@@ -353,7 +353,7 @@
 				<div class="row">
 					<div class="col-md-12 col-sm-12 col-xs-12">
 						<div class="section-title">
-							<h1><span>Características</span>  Personales y Profesionales<i class="fa fa-rocket"></i></h1>
+							<h1><span>Características</span><i class="fa fa-rocket"></i></h1>
 							
 						</div>
 					</div>
@@ -363,8 +363,8 @@
 						<!-- Single Service -->
 						<div class="single-service active">
 							<i class="fa fa-html5"></i>
-							<h2>Diseño web</h2>
-							<p>Diseño páginas web a medida, landing pages y web institucionales. Siempre bajo estándares web y velando por la mejor performance.</p>
+							<h2>Proactividad</h2>
+							<p>Soy una persona proactiva que busca constantemente maneras de mejorar los procesos y encontrar soluciones creativas</p>
 						</div>
 						<!-- End Single Service -->
 					</div>
@@ -372,8 +372,8 @@
 						<!-- Single Service -->
 						<div class="single-service">
 							<i class="fa fa-search"></i>
-							<h2>Posicionamiento web</h2>
-							<p>Realizo el análisis y la estrategia SEO para posicionar una web en Google en las primeras posiciones en las búsquedas online.</p>
+							<h2>Trabajo en equipo</h2>
+							<p>Disfruto trabajando en equipo y valoro la diversidad de ideas. Creo en la importancia de construir relaciones sólidas y positivas dentro del equipo</p>
 						</div>
 						<!-- End Single Service -->
 					</div>
@@ -381,8 +381,8 @@
 						<!-- Single Service -->
 						<div class="single-service">
 							<i class="fa fa-mobile"></i>
-							<h2>Diseño Web Adaptable</h2>
-							<p>Durante el proceso de diseño empleo un conjunto de técnicas para lograr la mayor efectividad, eficiencia y que sea adaptable a dispositivos mobiles.</p>
+							<h2>Resolución de problemas</h2>
+							<p>Tengo una sólida habilidad para resolver problemas, lo cual me permite abordar desafíos de manera estructurada y encontrar resultados prácticos</p>
 						</div>
 						<!-- End Single Service -->
 					</div>
@@ -390,8 +390,8 @@
 						<!-- Single Service -->
 						<div class="single-service">
 							<i class="fa fa-pencil-square-o"></i>
-							<h2>Personalizar sitio web</h2>
-							<p>Acompaño a mis clientes a construir juntos el diseño de la identidad de su marca con todos los elementos gráficos y digitales que necesite.</p>
+							<h2>Aprendizaje continuo</h2>
+							<p>Soy apasionado por mantenerme actualizado en las últimas tecnologías y tendencias de la industria. Siempre estoy buscando oportunidades para expandir mis conocimientos y habilidades</p>
 						</div>
 						<!-- End Single Service -->
 					</div>
