--- a/index.html
+++ b/index.html
@@ -551,8 +551,8 @@
 				<div class="row">
 					<div class="col-md-12 col-sm-12 col-xs-12">
 						<div class="section-title">
-							<h1><span>Como </span>trabajo<i class="fa fa-history"></i></h1>
-							<p>METODOLOGÍA<p>
+							<h1><span>Experiencia </span>Laboral<i class="fa fa-history"></i></h1>
+							<p>Cronologia<p>
 						</div>
 					</div>
 				</div>
@@ -567,8 +567,8 @@
 											<div class="date">
 												<p><span>01</span></p>
 											</div>
-											<h2><i class="fa fa-globe"></i> Investigación</h2>
-											<p>Realizo un estudio de mercado para identificar cuales son los drivers que van a potenciar la actividad online de cada negocio.<p>
+											<h2><i class="fa fa-globe"></i> Casinos MAC Group (2022 - 2024)</h2>
+											<p>Empleado de Casino MAC Group - Recepcionista<p>
 										</div>
 									</div>
 								</div>
@@ -580,8 +580,8 @@
 											<div class="date">
 												<p><span>02</span></p>
 											</div>
-											<h2><i class="fa fa-desktop"></i> Propuesta</h2>
-											<p>Diseño una propuesta a medida con recomendaciones visuales y velando siempre por la mejor experiencia para el usuario.<p>
+											<h2><i class="fa fa-desktop"></i> Municipalidad de Calilegua (2021 - 2022)</h2>
+											<p>En el area de rentas. Cobro de impuestos municipales<p>
 										</div>
 									</div>
 								</div>
@@ -593,8 +593,8 @@
 											<div class="date">
 												<p><span>03</span></p>
 											</div>
-											<h2><i class="fa fa-rocket"></i> Desarrollo</h2>
-											<p>Desarrollo el sitio web bajo los estándares web optimizando asi su posicionamiento SEO y performance.</p>
+											<h2><i class="fa fa-rocket"></i> Tecnico en Informatica (2016 - 2021)</h2>
+											<p>Intalación de programas y mantenimientos de pc</p>
 										</div>
 									</div>
 								</div>
@@ -606,8 +606,8 @@
 											<div class="date">
 												<p><span>04</span></p>
 											</div>
-											<h2><i class="fa fa-shield"></i> Mantenimiento y Seguridad</h2>
-											<p>Ofrezco monitoreo del sitio web para mas seguridad y mantenimiento las 24/7.</p>
+											<h2><i class="fa fa-shield"></i> Ciber Logos (2012 - 2015)</h2>
+											<p>Empleado del ciber logos</p>
 										</div>
 									</div>
 								</div>
