--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
 									<div class="single-timeline">
 										<div class="single-content">
 											<div class="date">
-												<p><span>01</span></p>
+												<p><span>(2022 - 2024)</span></p>
 											</div>
 											<h2><i class="fa fa-globe"></i> Casinos MAC Group (2022 - 2024)</h2>
 											<p>Empleado de Casino MAC Group - Recepcionista<p>
@@ -578,7 +578,7 @@
 									<div class="single-timeline">
 										<div class="single-content">
 											<div class="date">
-												<p><span>02</span></p>
+												<p><span>(2021 - 2022)</span></p>
 											</div>
 											<h2><i class="fa fa-desktop"></i> Municipalidad de Calilegua (2021 - 2022)</h2>
 											<p>En el area de rentas. Cobro de impuestos municipales<p>
@@ -591,7 +591,7 @@
 									<div class="single-timeline">
 										<div class="single-content">
 											<div class="date">
-												<p><span>03</span></p>
+												<p><span>(2016 - 2021)</span></p>
 											</div>
 											<h2><i class="fa fa-rocket"></i> Tecnico en Informatica (2016 - 2021)</h2>
 											<p>Intalación de programas y mantenimientos de pc</p>
@@ -604,9 +604,9 @@
 									<div class="single-timeline">
 										<div class="single-content">
 											<div class="date">
-												<p><span>04</span></p>
+												<p><span>(2012 - 2015)</span></p>
 											</div>
-											<h2><i class="fa fa-shield"></i> Ciber Logos (2012 - 2015)</h2>
+											<h2><i class="fa fa-shield"></i> Ciber Logos v</h2>
 											<p>Empleado del ciber logos</p>
 										</div>
 									</div>
