--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
 									<div class="single-timeline">
 										<div class="single-content">
 											<div class="date">
-												<p><span>(2022 - 2024)</span></p>
+												<p><span>2024 - 2022</span></p>
 											</div>
 											<h2><i class="fa fa-globe"></i> Casinos MAC Group (2022 - 2024)</h2>
 											<p>Empleado de Casino MAC Group - Recepcionista<p>
