--- a/index.html
+++ b/index.html
@@ -567,7 +567,8 @@
 											<div class="date">
 												<p><span>2024 - 2022</span></p>
 											</div>
-											<h2><i class="fa fa-globe"></i> Casinos MAC Group (2022 - 2024)</h2>
+											<h2><i class="fa fa-globe"></i> Casinos MAC Group</h2>
+											<img src="images/test2.png" class="img-circle" alt="testimonio cliente gabriel tercero">
 											<p>Empleado de Casino MAC Group - Recepcionista<p>
 										</div>
 									</div>
@@ -578,9 +579,9 @@
 									<div class="single-timeline">
 										<div class="single-content">
 											<div class="date">
-												<p><span>(2021 - 2022)</span></p>
+												<p><span>2022 - 2021</span></p>
 											</div>
-											<h2><i class="fa fa-desktop"></i> Municipalidad de Calilegua (2021 - 2022)</h2>
+											<h2><i class="fa fa-desktop"></i> Municipalidad de Calilegua</h2>
 											<p>En el area de rentas. Cobro de impuestos municipales<p>
 										</div>
 									</div>
@@ -591,10 +592,10 @@
 									<div class="single-timeline">
 										<div class="single-content">
 											<div class="date">
-												<p><span>(2016 - 2021)</span></p>
+												<p><span>2021 - 2016</span></p>
 											</div>
-											<h2><i class="fa fa-rocket"></i> Tecnico en Informatica (2016 - 2021)</h2>
-											<p>Intalación de programas y mantenimientos de pc</p>
+											<h2><i class="fa fa-rocket"></i> Tecnico en Informatica</h2>
+											<p>Instalación de programas y mantenimientos de pc</p>
 										</div>
 									</div>
 								</div>
@@ -604,10 +605,10 @@
 									<div class="single-timeline">
 										<div class="single-content">
 											<div class="date">
-												<p><span>(2012 - 2015)</span></p>
+												<p><span>2015 - 2012</span></p>
 											</div>
-											<h2><i class="fa fa-shield"></i> Ciber Logos v</h2>
-											<p>Empleado del ciber logos</p>
+											<h2><i class="fa fa-shield"></i> Ciber Logos</h2>
+											<p>Empleado de Ciber Logos</p>
 										</div>
 									</div>
 								</div>
