--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
 												<p><span>2024 - 2022</span></p>
 											</div>
 											<h2><i class="fa fa-globe"></i> Casinos MAC Group</h2>
-											<img src="images/test2.png" class="img-circle" alt="testimonio cliente gabriel tercero">
+											<img src="images/test2.png" width="80" height="80" class="img-circle" alt="testimonio cliente gabriel tercero">
 											<p>Empleado de Casino MAC Group - Recepcionista<p>
 										</div>
 									</div>
