--- a/index.html
+++ b/index.html
@@ -567,8 +567,8 @@
 											<div class="date">
 												<p><span>2024 - 2022</span></p>
 											</div>
-											<h2><i class="fa fa-globe"></i> Casinos MAC Group</h2>
-											<img src="images/test2.png" width="80" height="80" class="img-circle" alt="testimonio cliente gabriel tercero">
+											<h2><img src="images/test2.png" width="40" height="40" class="img-circle"> Casinos MAC Group</h2>
+											<img src="images/test2.png" width="80" height="80" class="img-circle">
 											<p>Empleado de Casino MAC Group - Recepcionista<p>
 										</div>
 									</div>
