--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 											<div class="date">
 												<p><span>2021 - 2016</span></p>
 											</div>
-											<h2><i class="fa fa-rocket"></i> Tecnico en Informatica</h2>
+											<h2><img src="https://w7.pngwing.com/pngs/979/464/png-transparent-blue-and-black-computer-technician-laptop-computer-repair-technician-logo-home-repair-logos-computer-laptop-computer-hardware.png" width="50" height="50" class="img-circle"> Tecnico en Informatica</h2>
 											<p>Instalación de programas y mantenimientos de pc</p>
 										</div>
 									</div>
@@ -606,7 +606,7 @@
 											<div class="date">
 												<p><span>2015 - 2012</span></p>
 											</div>
-											<h2><i class="fa fa-shield"></i> Ciber Logos</h2>
+											<h2><img src="https://w7.pngwing.com/pngs/313/439/png-transparent-ciber-hd-logo-thumbnail.png" width="50" height="50" class="img-circle"> Ciber Logos</h2>
 											<p>Empleado de Ciber Logos</p>
 										</div>
 									</div>
