--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 									<ul class="social">
 										<li><a href="https://www.facebook.com/gabriel.tercero.54"><i class="fa fa-facebook"></i></a></li>
 										<li><a href="https://twitter.com/94_gst"><i class="fa fa-twitter"></i></a></li>
-										<li><a href="https://api.whatsapp.com/send?phone=+543886569167"><i class="fa fa-whatsapp"></i></a></li>
+										<li><a href="https://wa.me/3886569167"><i class="fa fa-whatsapp"></i></a></li>
 										<li><a href="https://m.me/gabriel.tercero.54"><i class="fa fa-comments-o"></i></a></li>
 									</ul>
 								</div>
