--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
 							<a><i class="fa fa-facebook" style="font-size: 36px; color:rgb(255, 255, 255)"></i></a>
 							<a href="https://twitter.com/94_gst"><i class="fa fa-twitter" style="font-size: 36px; color:rgb(65, 65, 65)"></i></a>
 							<a><i class="fa fa-facebook" style="font-size: 36px; color:rgb(255, 255, 255)"></i></a>
-							<a href="https://api.whatsapp.com/send?phone=+543886569167"><i class="fa fa-whatsapp" style="font-size: 36px; color:rgb(65, 65, 65)"></i></a>
+							<a href="https://wa.me/+543886569167"><i class="fa fa-whatsapp" style="font-size: 36px; color:rgb(65, 65, 65)"></i></a>
 							<a><i class="fa fa-facebook" style="font-size: 36px; color:rgb(255, 255, 255)"></i></a>
 							<a href="https://m.me/gabriel.tercero.54"><i class="fa fa-comments-o" style="font-size: 36px; color:rgb(65, 65, 65)"></i></a>
 							
