--- a/index.html
+++ b/index.html
@@ -620,167 +620,6 @@
 		</section>
 		<!--/ End Timeline -->
 		
-		<!-- Start Pricing Table -->
-		<section id="pricing" class="section">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 col-sm-12 col-xs-12">
-						<div class="section-title">
-							<h1><span>Servicio y</span> Precio<i class="fa fa-history"></i></h1>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<!-- Single Table -->
-					<div class="col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-delay="0.4s">
-						<div class="single-table">
-							<!-- Table Head -->
-							<div class="table-head">
-								<h2 class="title">Basico</h2>
-								<div class="price">
-									<p class="amount">$<span>15.000</span> ANUAL</p>
-								</div>
-								<i class="fa fa-address-card"></i>
-							</div>
-							<!-- Table List -->
-							<ul class="table-list">
-								<li>Cantidad de pagina 1</li>
-								<li>Diseño Simple</li>
-								<li>24/7 Soporte Tecnico</li>
-								<li>Mini cambios en Sitio Web</li>
-								<li>Cuenta de correo electrónico limitada</li>
-								<li class="cross">Espacio del disco limitado</li>
-							</ul>
-							<!-- Table Bottom -->
-							<div class="table-bottom">
-								<a class="btn shine" href="#contact">Seleccionar<i class="fa fa-angle-right"></i></a>
-							</div>
-						</div>
-					</div>
-					<!-- End Single Table-->
-					<!-- Single Table -->
-					<div class="col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-delay="0.6s">
-						<div class="single-table">
-							<!-- Table Head -->
-							<div class="table-head">
-								<h2 class="title">Estandar</h2>
-								<div class="price">
-									<p class="amount">$<span>24.000</span> ANUAL</p>
-								</div>
-								<i class="fa fa-address-card"></i>
-							</div>
-							<!-- Table List -->
-							<ul class="table-list">
-								<li>Cantidad de paginas 5</li>
-								<li>Diseño Personalizado</li>
-								<li>24/7 Soporte Tecnico</li>
-								<li>Mini cambios en Sitio Web</li>
-								<li>Cuenta de correo electrónico ilimitada</li>
-								<li class="cross">Espacio del disco 1GB</li>
-							</ul>
-							<!-- Table Bottom -->
-							<div class="table-bottom">
-								<a class="btn shine" href="#contact">Seleccionar<i class="fa fa-angle-right"></i></a>
-							</div>
-						</div>
-					</div>
-					<!-- End Single Table-->
-					<!-- Single Table -->
-					<div class="col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-delay="0.6s">
-						<div class="single-table">
-							<!-- Table Head -->
-							<div class="table-head">
-								<h2 class="title">ECOMMERCE</h2>
-								<div class="price">
-									<p class="amount">$<span>70.000</span> ANUAL</p>
-								</div>
-								<style>
-									.textooferta { 
-									color: rgb(255, 255, 255);
-									}
-								</style>
-								<i class="fa fa-address-card"></i>
-							</div>
-							<!-- Table List -->
-							<ul class="table-list">
-								<li>Cantidad de paginas 10</li>
-								<li>Diseño Personalizado + Catálogo</li>
-								<li>24/7 Soporte Tecnico</li>
-								<li>Sitio Web Autoadministrable</li>
-								<li>Cuenta de correo electrónico ilimitada</li>
-								<li class="cross">Espacio del disco ilimitado</li>
-							</ul>
-							<!-- Table Bottom -->
-							<div class="table-bottom">
-								<a class="btn shine" href="#contact">Seleccionar<i class="fa fa-angle-right"></i></a>
-							</div>
-						</div>
-					</div>
-					<!-- End Single Table-->
-				</div>	
-			</div>	
-		</section>		
-		<!--/ End Pricing Table -->
-		
-		<!-- Start Testimonials -->
-		<section id="testimonials" class="section" data-stellar-background-ratio="0.3">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 col-sm-12 col-xs-12">
-						<div class="section-title">
-							<h1><span>Testimonios de</span> Clientes<i class="fa fa-star"></i></h1>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<div class="testimonial-carousel">
-							<!-- Single Testimonial -->
-							<div class="single-testimonial">
-								<div class="testimonial-content">
-									<i class="fa fa-quote-left"></i>
-									<p>Excelente diseñador web. Muy detallista, prolijo y sin demoras. Realmente lo recomiendo.</p>
-								</div>
-								<div class="testimonial-info">
-									<img src="images/test2.png" class="img-circle" alt="testimonio cliente gabriel tercero">
-									<ul class="rating">
-										<li><i class="fa fa-star"></i></li>
-										<li><i class="fa fa-star"></i></li>
-										<li><i class="fa fa-star"></i></li>
-										<li><i class="fa fa-star"></i></li>
-										<li><i class="fa fa-star"></i></li>
-									</ul>
-									<h6>Leonardo Campo<span>Dueño LDConstrucciones</span></h6>
-								</div>			
-							</div>
-							<!--/ End Single Testimonial -->
-							<!-- Single Testimonial -->
-							<div class="single-testimonial">
-								<div class="testimonial-content">
-									<i class="fa fa-quote-left"></i>
-									<p>Excelente lugar y atención muy recomendable y encima muy buenos precios.</p>
-								</div>
-								<div class="testimonial-info">
-									<img src="images/test1.jpg" class="img-circle" alt="testimonio web jujuy">
-									<ul class="rating">
-										<li><i class="fa fa-star"></i></li>
-										<li><i class="fa fa-star"></i></li>
-										<li><i class="fa fa-star"></i></li>
-										<li><i class="fa fa-star"></i></li>
-										<li><i class="fa fa-star"></i></li>
-									</ul>
-									<h6>Exequiel Cruz<span>Cliente de centaurocorteyplegadosalta</span></h6>
-								</div>			
-							</div>
-							<!--/ End Single Testimonial -->
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!--/ End Testimonials -->
-		
-			
 		
 		<!-- Start Call To Action -->
 		<section id="call-action" class="section wow fadeInUp">
@@ -947,7 +786,7 @@
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<!-- Copyright -->
 						<div class="copyright">
-							<p>&copy; Copyright 2021. Diseño y desarrollo por Gabriel Tercero<a href="https://gabrieltercero.com.ar"> gabrieltercero.com.ar<a/></p>
+							<p>&copy; Copyright 2024. Diseñado por Gabriel Tercero<a href="https://gabrieltercero.com.ar"> gabrieltercero.com.ar<a/></p>
 						</div>
 						<!--/ End Copyright -->
 					</div>
