--- a/index.html
+++ b/index.html
@@ -100,10 +100,8 @@
 								<div class="collapse navbar-collapse">
 									<ul class="nav navbar-nav menu">
 										<li class="active"><a href="#personal-area"><i class="fa fa-home"></i>Inicio</a></li>
-										<li><a href="#my-service"><i class="fa fa-rocket"></i>Mi Servicio</a></li>
-										<li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
-										<li><a href="#my-timeline"><i class="fa fa-history"></i>Metodología</a></li>
-										<li><a href="#testimonials"><i class="fa fa-star"></i>Testimonios</a></li>	
+										<li><a href="#my-service"><i class="fa fa-rocket"></i>Caracteristicas</a></li>
+										<li><a href="#portfolio"><i class="fa fa-briefcase"></i>Proyectos</a></li>
 										<li><a href="#contact"><i class="fa fa-address-book"></i>Contacto</a></li>		
 									</ul>
 									<ul class="social-icon">
@@ -146,7 +144,7 @@
 										<h2 class="cd-headline clip is-full-width">
 										   Soy
 										   <span class="cd-words-wrapper">
-											   <b class="is-visible">Diseñador UI/UX</b>
+											   <b class="is-visible">Programador</b>
 											   <b>Desarrollador Web</b>
 											   <b>Tecnico en Informatica</b>
 											</span>
@@ -552,7 +550,7 @@
 					<div class="col-md-12 col-sm-12 col-xs-12">
 						<div class="section-title">
 							<h1><span>Experiencia </span>Laboral<i class="fa fa-history"></i></h1>
-							<p>Cronologia<p>
+							<p>Orden cronológico<p>
 						</div>
 					</div>
 				</div>
@@ -627,8 +625,8 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="call-action-main">
-							<h2>¿Buscás un diseñador web freelance?</h2>
-							<p>Estoy listo para tu próximo proyecto.</p>
+							<h2>Estoy en búsqueda activa de nuevas oportunidades laborales donde pueda aplicar mis habilidades y experiencia</h2>
+							<p>En buscar un nuevo rol que me permita aplicar mis fortalezas y continuar mi desarrollo profesional</p>
 							<div class="button">
 								<a href="#contact" class="btn"><i class="fa fa-address-book"></i>¡Contactame!</a>
 							</div>
