--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 					<div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-delay="0.4s">
 						<!-- Single Service -->
 						<div class="single-service active">
-							<i class="fa fa-html5"></i>
+							<i class="fa fa-lightbulb-o"></i>
 							<h2>Proactividad</h2>
 							<p>Soy una persona proactiva que busca constantemente maneras de mejorar los procesos y encontrar soluciones creativas</p>
 						</div>
@@ -369,7 +369,7 @@
 					<div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-delay="0.6s">
 						<!-- Single Service -->
 						<div class="single-service">
-							<i class="fa fa-search"></i>
+							<i class="fa fa-handshake-o"></i>
 							<h2>Trabajo en equipo</h2>
 							<p>Disfruto trabajando en equipo y valoro la diversidad de ideas. Creo en la importancia de construir relaciones sólidas y positivas dentro del equipo</p>
 						</div>
@@ -378,7 +378,7 @@
 					<div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-delay="0.8s">
 						<!-- Single Service -->
 						<div class="single-service">
-							<i class="fa fa-mobile"></i>
+							<i class="fa fa-search"></i>
 							<h2>Resolución de problemas</h2>
 							<p>Tengo una sólida habilidad para resolver problemas, lo cual me permite abordar desafíos de manera estructurada y encontrar resultados prácticos</p>
 						</div>
@@ -387,7 +387,7 @@
 					<div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-delay="1s">
 						<!-- Single Service -->
 						<div class="single-service">
-							<i class="fa fa-pencil-square-o"></i>
+							<i class="fa fa-book"></i>
 							<h2>Aprendizaje continuo</h2>
 							<p>Soy apasionado por mantenerme actualizado en las últimas tecnologías y tendencias de la industria. Siempre estoy buscando oportunidades para expandir mis conocimientos y habilidades</p>
 						</div>
